@@ -769,3 +769,13 @@ DEFINE_TESTCASE(emptydb1, backend) {
     }
     return true;
 }
+
+/// Test error opening non-existent stub databases.
+// Regression test for bug fixed in 1.3.1 and 1.2.11.
+DEFINE_TESTCASE(stubdb7, !backend) {
+    TEST_EXCEPTION(Xapian::DatabaseOpeningError,
+		   Xapian::Auto::open_stub("nosuchdirectory"));
+    TEST_EXCEPTION(Xapian::DatabaseOpeningError,
+		   Xapian::Auto::open_stub("nosuchdirectory", Xapian::DB_OPEN));
+    return true;
+}
